--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1387,7 +1387,7 @@ en:
       edit_school_details: Edit school details
       edit_social_links: Edit social media links
       edit_terms: Edit Terms & Conditions
-      featured_courses: Featured Courses
+      featured_courses: Featured Sessions
       hello_welcome: Hello, welcome to
       homepage: Home Page
       icon: Icon
@@ -1930,7 +1930,7 @@ en:
       access_ended: Review course content
       active: Continue course
       dropped_out: Dropped out
-      featured_courses_heading: Featured Courses
+      featured_courses_heading: Featured Sessions
       get_started: Get started
       learn_more: Learn more
       welcome_prefix: Hello, welcome to
