--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -352,7 +352,7 @@ en:
         help_url: https://docs.e-dalasa.com/users/courses#processing-url
         label: Do you want to process applicant information before enrolling them?
       progression_behavior:
-        help: This only applies if your course has milestone targets that requires students to submit their work for review by coaches.
+        help: This only applies if your course has milestone targets that requires students to submit their work for review by pastors.
         help_url: https://docs.e-dalasa.com/users/courses#progression-behaviour
         label: Progression Behavior
         limited:
