--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2118,7 +2118,7 @@ en:
     student:
       enrollment:
         body:
-          link_to: sign into %{school_name} and start working on this sessopn
+          link_to: sign into %{school_name} and start working on this session
           main_html: You have been enrolled as a member in the session <strong>%{course_name}</strong>, on %{school_name}.
           sign_html: You can now %{link_to}.
           team: You have also been teamed up with %{team_members}; this means that you will be expected to work together to progress in this session.
